--- a/limbtips/templates/blog/article/blog.html
+++ b/limbtips/templates/blog/article/blog.html
@@ -7,7 +7,8 @@
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item active" aria-current="page">Blog</li>
+        <li class="breadcrumb-item"><a href="/blog/">Blog</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{{ article["title"] }}</li>
     </ol>
 </nav>
 {% endblock %}
