--- a/limbtips/templates/base/home_content.html
+++ b/limbtips/templates/base/home_content.html
@@ -24,12 +24,12 @@
 
 </div>
 <div class="mt-4 row row-cols-1 row-cols-sm-2 row-cols-md-4">
-    <div class="col">
-        <div class="card" style="width: 100%;">
+    <div class="col mb-2">
+        <div class="card" style="width: 100%; height: 100%;">
             <div class="card-header">
                 DNS Tool
             </div>
-            <div class="card-body">
+            <div class="card-body" style="min-height: 40%;">
                 <p class="card-text">Query popular Domain Name Resolution (DNS) servers for checking DNS propagation.</p>
             </div>
             <div class="card-body">
@@ -37,7 +37,19 @@
             </div>
         </div>
     </div>
-    <div class="col"></div>
+    <div class="col mb-2">
+        <div class="card" style="width: 100%; height: 100%;">
+            <div class="card-header">
+                Virus Tool
+            </div>
+            <div class="card-body" style="min-height: 40%;">
+                <p class="card-text">Check MD5 hashes aginst the VirusShare public hash lists.</p>
+            </div>
+            <div class="card-body">
+                <a href="/development/virus/" class="card-link">Go to Tool</a>
+            </div>
+        </div>
+    </div>
     <div class="col"></div>
     <div class="col"></div>
 </div>
