--- a/limbtips/templates/global_base.html
+++ b/limbtips/templates/global_base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Tools by Matt Limb</title>
+    <title>Limb Tips</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -13,7 +13,7 @@
 
 <body style="background-color: #f3f3f3;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">Tools {% if active_page == "home" %}<span class="sr-only">(current)</span>{% endif %}</a>
+        <a class="navbar-brand" href="/">Limb Tips {% if active_page == "home" %}<span class="sr-only">(current)</span>{% endif %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,12 +24,13 @@
                     <a class="nav-link {% if 'blog' in active_page %}active{% endif %}"" href="/blog/">Blog</a>
                 </li>
                 <li class="nav-item dropdown {% if 'development' in active_page %}active{% endif %}">
-                    <a class="nav-link dropdown-toggle" href="/development/" id="navbarDropdownMenuLink" role="button"
+                    <a class="nav-link dropdown-toggle" href="/development/" id="developmentTools" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Development Tools
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="dropdown-menu" aria-labelledby="developmentTools">
                         <a class="dropdown-item {% if 'development.dns' == active_page %}active{% endif %}" href="/development/dns/">DNS Tool{% if 'development.dns' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
+                        <a class="dropdown-item {% if 'development.virus' == active_page %}active{% endif %}" href="/development/virus/">Virus Tool{% if 'development.virus' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
                     </div>
                 </li>
             </ul>
