--- a/limbtips/templates/global_base.html
+++ b/limbtips/templates/global_base.html
@@ -12,6 +12,17 @@
 </head>
 
 <body style="background-color: #f3f3f3;">
+    <!-- Scripts so they are loaded for Custom JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="/">Limb Tips {% if active_page == "home" %}<span class="sr-only">(current)</span>{% endif %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -31,6 +42,7 @@
                     <div class="dropdown-menu" aria-labelledby="developmentTools">
                         <a class="dropdown-item {% if 'development.dns' == active_page %}active{% endif %}" href="/development/dns/">DNS Tool{% if 'development.dns' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
                         <a class="dropdown-item {% if 'development.virus' == active_page %}active{% endif %}" href="/development/virus/">Virus Tool{% if 'development.virus' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
+                        <a class="dropdown-item {% if 'development.xml2json' == active_page %}active{% endif %}" href="/development/xml2json/">xml2json Tool{% if 'development.xml2json' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
                     </div>
                 </li>
             </ul>
@@ -42,15 +54,6 @@
     {% block content %}{% endblock %}
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
