--- a/limbtips/templates/base/home_content.html
+++ b/limbtips/templates/base/home_content.html
@@ -50,6 +50,17 @@
             </div>
         </div>
     </div>
+    <div class="card" style="width: 100%; height: 100%;">
+        <div class="card-header">
+            xml2json Tool
+        </div>
+        <div class="card-body" style="min-height: 40%;">
+            <p class="card-text">Convert a XML document into easily parsable JSON, without loosing metadata.</p>
+        </div>
+        <div class="card-body">
+            <a href="/development/xml2json/" class="card-link">Go to Tool</a>
+        </div>
+    </div>
     <div class="col"></div>
     <div class="col"></div>
 </div>
