Added Sankey Charts

--- a/limbtips/templates/base/home_content.html
+++ b/limbtips/templates/base/home_content.html
@@ -64,4 +64,29 @@
     <div class="col"></div>
     <div class="col"></div>
 </div>
+
+<div class="mt-4 row row-cols-1 row-cols-sm-2 row-cols-md-4">
+    <div class="col">
+        <h4 class="text-muted">Charts</h4>
+    </div>
+
+</div>
+<div class="mt-4 row row-cols-1 row-cols-sm-2 row-cols-md-4">
+    <div class="col">
+        <div class="card" style="width: 100%; height: 100%;">
+            <div class="card-header">
+                Sankey Chart Creator
+            </div>
+            <div class="card-body" style="min-height: 40%;">
+                <p class="card-text">Create Sankey charts in an interactive editor.</p>
+            </div>
+            <div class="card-body">
+                <a href="/charts/sankey/" class="card-link">Go to Tool</a>
+            </div>
+        </div>
+    </div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+</div>
 {% endblock %}
