--- a/limbtips/templates/global_base.html
+++ b/limbtips/templates/global_base.html
@@ -45,6 +45,16 @@
                         <a class="dropdown-item {% if 'development.xml2json' == active_page %}active{% endif %}" href="/development/xml2json/">xml2json Tool{% if 'development.xml2json' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown {% if 'charts' in active_page %}active{% endif %}">
+                    <a class="nav-link dropdown-toggle" href="/charts/" id="chartTools" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Charts
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="chartTools">
+                        <a class="dropdown-item {% if 'charts.sankey' == active_page %}active{% endif %}" href="/charts/sankey/">Sankey{% if 'charts.sankey' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
+                    </div>
+                    
+                </li>
             </ul>
         </div>
     </nav>
