--- a/limbtips/templates/base/home_content.html
+++ b/limbtips/templates/base/home_content.html
@@ -1,6 +1,7 @@
 {% extends "global_base.html" %}
 
 {% block content %}
+<!--
 <div class="mt-4 row row-cols-1 row-cols-sm-2 row-cols-md-4">
     <div class="col col-12">
         <div class="card" style="width: 100%;">
@@ -15,7 +16,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="mt-4 row row-cols-1 row-cols-sm-2 row-cols-md-4">
     <div class="col">
@@ -37,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div class="col mb-2">
+    <!-- <div class="col mb-2">
         <div class="card" style="width: 100%; height: 100%;">
             <div class="card-header">
                 Virus Tool
@@ -49,7 +50,7 @@
                 <a href="/development/virus/" class="card-link">Go to Tool</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="card" style="width: 100%; height: 100%;">
         <div class="card-header">
             xml2json Tool
