--- a/limbtips/templates/global_base.html
+++ b/limbtips/templates/global_base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <link rel="icon" type="image/ico" href="/static/favicon.ico">
     {% block custom_stylesheets %}{% endblock %}
 </head>
 
@@ -24,7 +24,8 @@
         crossorigin="anonymous"></script>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">Limb Tips {% if active_page == "home" %}<span class="sr-only">(current)</span>{% endif %}</a>
+        <a class="navbar-brand" href="/">Limb Tips {% if active_page == "home" %}<span
+                class="sr-only">(current)</span>{% endif %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,9 +41,14 @@
                         Development Tools
                     </a>
                     <div class="dropdown-menu" aria-labelledby="developmentTools">
-                        <a class="dropdown-item {% if 'development.dns' == active_page %}active{% endif %}" href="/development/dns/">DNS Tool{% if 'development.dns' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
+                        <a class="dropdown-item {% if 'development.dns' == active_page %}active{% endif %}"
+                            href="/development/dns/">DNS Tool{% if 'development.dns' == active_page %}<span
+                                class="sr-only">(current)</span>{% endif %}</a>
                         <!--<a class="dropdown-item {% if 'development.virus' == active_page %}active{% endif %}" href="/development/virus/">Virus Tool{% if 'development.virus' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>-->
-                        <a class="dropdown-item {% if 'development.xml2json' == active_page %}active{% endif %}" href="/development/xml2json/">xml2json Tool{% if 'development.xml2json' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
+                        <a class="dropdown-item {% if 'development.xml2json' == active_page %}active{% endif %}"
+                            href="/development/xml2json/">xml2json
+                            Tool{% if 'development.xml2json' == active_page %}<span
+                                class="sr-only">(current)</span>{% endif %}</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown {% if 'charts' in active_page %}active{% endif %}">
@@ -51,9 +57,11 @@
                         Charts
                     </a>
                     <div class="dropdown-menu" aria-labelledby="chartTools">
-                        <a class="dropdown-item {% if 'charts.sankey' == active_page %}active{% endif %}" href="/charts/sankey/">Sankey{% if 'charts.sankey' == active_page %}<span class="sr-only">(current)</span>{% endif %}</a>
+                        <a class="dropdown-item {% if 'charts.sankey' == active_page %}active{% endif %}"
+                            href="/charts/sankey/">Sankey{% if 'charts.sankey' == active_page %}<span
+                                class="sr-only">(current)</span>{% endif %}</a>
                     </div>
-                    
+
                 </li>
             </ul>
         </div>
@@ -61,7 +69,7 @@
     {% block breadcrumbs %}{% endblock %}
 
     <div class="container-fluid pb-5">
-    {% block content %}{% endblock %}
+        {% block content %}{% endblock %}
     </div>
 
 </body>
